Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19040

CMake Simplified Project structure shows too many side nodes from standard Qt framework that is not useful but comes first

    XMLWordPrintable

Details

    Description

      When I switch to simplified view in CMake project I see lots of internal Qt *.cmake files comes over the actual project files that I can't hide and that makes this view totally unusable and confusing.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            koldoon Vadim
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes