CMake: Show "CMake Modules" node in simplified project tree

Show "CMake Modules" node in simplified tree. That keeps all the
Qt cmake code from mixing with the real project files.

Task-number: QTCREATORBUG-19040
Change-Id: I1a12c7f64db2c06982de1c66a6e54e4d936ae784
Reviewed-by: Eike Ziller <eike.ziller@qt.io>